--- a/Objetos 2 - Propiedades template/Objetos 2 - Propiedades template/index.html
+++ b/Objetos 2 - Propiedades template/Objetos 2 - Propiedades template/index.html
@@ -36,6 +36,12 @@
           <button type="submit">Agregar Carro</button>
         </form>
       </div>
+
+      <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Buscar por marca" />
+        <button id="searchButton"> buscar </button>
+      </div>
+
       <div class="cars-list">
         <h2>Lista de Carros</h2>
         <div id="carsContainer"></div>
