--- a/Objetos 2 - Propiedades template/Objetos 2 - Propiedades template/index.html
+++ b/Objetos 2 - Propiedades template/Objetos 2 - Propiedades template/index.html
@@ -39,7 +39,9 @@
 
       <div class="search-container">
         <input type="text" id="searchInput" placeholder="Buscar por marca" />
-        <button id="searchButton"> buscar </button>
+        <button id="searchButton"> Buscar </button>
+        <button style="background-color: rgb(45, 164, 83);" id="searchAll">Buscar Todos</button>
+        <button id="searchUltimos"> Ultimo agregado</button>
       </div>
 
       <div class="cars-list">
